# agenty

./: CLAUDE.md  Cargo.toml  README.md
crates/agenty-cli/: Cargo.toml
crates/agenty-cli/src/: main.rs
crates/agenty-core/: Cargo.toml
crates/agenty-core/src/: lib.rs
crates/agenty-memory/: Cargo.toml
crates/agenty-memory/src/: lib.rs
crates/agenty-plugins/: Cargo.toml
crates/agenty-plugins/src/: lib.rs  registry.rs  script.rs
crates/agenty-providers/: Cargo.toml
crates/agenty-providers/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  rate_limit.rs
crates/agenty-providers/tests/: anthropic.rs
crates/agenty-repl/: Cargo.toml
crates/agenty-repl/src/: commands.rs  lib.rs
crates/agenty-repl/tests/: repl.rs
crates/agenty-session/: Cargo.toml
crates/agenty-session/src/: lib.rs
crates/agenty-tools/: Cargo.toml
crates/agenty-tools/src/: bash.rs  lib.rs  list_files.rs  memory.rs  read_file.rs  sandbox.rs  web_search.rs  write_file.rs
crates/agenty-tui/: Cargo.toml
crates/agenty-tui/src/: lib.rs
crates/agenty-types/: Cargo.toml
crates/agenty-types/src/: lib.rs
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: getting-started.md  plugins.md  tools.md
docs/src/content/docs/reference/: cli.md  configuration.md  plugin-manifest.md  sandbox.md  tools.md
