[workspace]
resolver = "3"
members = ["crates/agenty-core","crates/agenty-providers","crates/agenty-session","crates/agenty-memory","crates/agenty-tools","crates/agenty-plugins","crates/agenty-repl","crates/agenty-tui","crates/agenty-cli"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
