[package]
name = "agenty-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agenty"
path = "src/main.rs"

[dependencies]
agenty-core      = { path = "../agenty-core" }
agenty-providers = { path = "../agenty-providers", features = ["anthropic"] }
agenty-repl      = { path = "../agenty-repl" }
agenty-tui       = { path = "../agenty-tui" }
agenty-tools     = { path = "../agenty-tools" }
clap             = { version = "4", features = ["derive"] }
dotenvy          = "0.15"
tokio            = { version = "1", features = ["macros", "rt-multi-thread"] }
