[package]
name = "agenty-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
agenty-tools = { path = "../agenty-tools" }
agenty-core = { path = "../agenty-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
