[package]
name = "agenty-tui"
version.workspace = true
edition.workspace = true

[dependencies]
agenty-types     = { path = "../agenty-types" }
agenty-repl      = { path = "../agenty-repl" }
agenty-providers = { path = "../agenty-providers", features = ["anthropic"] }
ratatui          = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm        = { version = "0.28", features = ["event-stream"] }
futures          = "0.3"
futures-util     = "0.3"
serde_json       = "1"
tokio            = { version = "1", features = ["sync", "macros"] }
